Brush Size not accurate on hiDPI retina screen #72404

Closed
opened 2019-12-13 01:45:28 +01:00 by Gabriel Moro · 32 comments

System Information
Operating system: Darwin-19.0.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.2.24

Blender Version
Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: 63d521432e
Worked: (optional)

Short description of error
When setting the Brush Size in Particle Edit mode it displays one size (first pic) and after you confirm it shows it way bigger. The actual area of the brush that works is the right one though, the one you chose before confirming.

Screen Shot 2019-12-11 at 21.59.57.png

Screen Shot 2019-12-11 at 21.59.53.png

**System Information** Operating system: Darwin-19.0.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.2.24 **Blender Version** Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: `63d521432e` Worked: (optional) **Short description of error** When setting the Brush Size in Particle Edit mode it displays one size (first pic) and after you confirm it shows it way bigger. The actual area of the brush that works is the right one though, the one you chose before confirming. ![Screen Shot 2019-12-11 at 21.59.57.png](https://archive.blender.org/developer/F8214549/Screen_Shot_2019-12-11_at_21.59.57.png) ![Screen Shot 2019-12-11 at 21.59.53.png](https://archive.blender.org/developer/F8214548/Screen_Shot_2019-12-11_at_21.59.53.png)
Author

Added subscriber: @GabrielMoro

Added subscriber: @GabrielMoro
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Seems to work for me. Please provide a simple .blend file that allows me to reproduce the issue.

Seems to work for me. Please provide a simple .blend file that allows me to reproduce the issue.
Author

This is not specific to a project... There's a way to reproduce this in the default file in 50s, I recorded it.
You can see the brush behaviour is very inconsistent in the Particle Edit.

ScreenFlow.mp4

This is not specific to a project... There's a way to reproduce this in the default file in 50s, I recorded it. You can see the brush behaviour is very inconsistent in the Particle Edit. [ScreenFlow.mp4](https://archive.blender.org/developer/F8251984/ScreenFlow.mp4)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with either the latest stable or current development versions of Blender.
Is this a problem with your keymap settings?

Please try the latest daily build: https://builder.blender.org/download/
Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

I cannot reproduce this with either the latest stable or current development versions of Blender. Is this a problem with your keymap settings? Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please give us more clear instructions on how to reproduce it from scratch.
Author

Tested on todays build and now the problem is only that the Brush size isn't accurate once you "release" when resizing.
Everything on the brush radius is moving but it isn't on the size I set it to be (when using the F shortcut).

ScreenFlow.mp4

Tested on todays build and now the problem is only that the Brush size isn't accurate once you "release" when resizing. Everything on the brush radius is moving but it isn't on the size I set it to be (when using the F shortcut). [ScreenFlow.mp4](https://archive.blender.org/developer/F8267676/ScreenFlow.mp4)

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

As hard as I try, I can't reproduce the problem:
GIF.gif

As hard as I try, I can't reproduce the problem: ![GIF.gif](https://archive.blender.org/developer/F8267697/GIF.gif)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'
Member

Also cannot reproduce this here.
Just to be totally sure we are all on the same page: could you share your .blend?

Also cannot reproduce this here. Just to be totally sure we are all on the same page: could you share your .blend?
Author

Sure! There you go: untitled.blend

I loaded the factory settings as asked for the test I posted.
Maybe it's Mac related? It often is when I report bugs...

Sure! There you go: [untitled.blend](https://archive.blender.org/developer/F8267709/untitled.blend) I loaded the factory settings as asked for the test I posted. Maybe it's Mac related? It often is when I report bugs...

Interesting that you mention that the problem happens when you release.
But by default the brush is applied when you press the mouse button.
This makes me suspect that your keymap is different.

Interesting that you mention that the problem happens when you `release`. But by default the brush is applied when you `press` the mouse button. This makes me suspect that your keymap is different.
Author

Just the wrong word used... You can see me struggling with the Tab shortcut because of the "Load Factory Settings" on the video.

The thing I did was:
F > Slide to scale > F again to apply (what I meant by release).

Just the wrong word used... You can see me struggling with the Tab shortcut because of the "Load Factory Settings" on the video. The thing I did was: F > Slide to scale > F again to apply (what I meant by release).

Added subscriber: @iss

Added subscriber: @iss

In #72404#845379, @GabrielMoro wrote:
The thing I did was:
F > Slide to scale > F again to apply (what I meant by release).

I can not press F to apply

I have to do F > Slide to scale > Click to apply

> In #72404#845379, @GabrielMoro wrote: > The thing I did was: > F > Slide to scale > F again to apply (what I meant by release). I can not press F to apply I have to do F > Slide to scale > Click to apply

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'
Richard Antalik self-assigned this 2020-01-26 03:02:00 +01:00

Will close this report because of no new info, that would help us to reproduce the issue.

Will close this report because of no new info, that would help us to reproduce the issue.
Author

I gave all the info I had... you can see in the video how it behaves. It’s probably Mac related so a Mac developer could probably reproduce.

I gave all the info I had... you can see in the video how it behaves. It’s probably Mac related so a Mac developer could probably reproduce.

Changed status from 'Archived' to: 'Needs Developer To Reproduce'

Changed status from 'Archived' to: 'Needs Developer To Reproduce'

I can reopen this, but there are numerous issues with macOS currently, because openGL is no longer supported on that platform. Therefore we can not guarantee fix even if issue could be reproduced.

I can reopen this, but there are numerous issues with macOS currently, because openGL is no longer supported on that platform. Therefore we can not guarantee fix even if issue could be reproduced.

Added subscriber: @jenkm

Added subscriber: @jenkm

It depends on the pixel density of a screen.
If you "Open in Low Resolution", then all will work fine.
When you adjust "Brush Size" (F) you see a circle with a radius without taking into account the hiDPI.

It depends on the pixel density of a screen. If you "Open in Low Resolution", then all will work fine. When you adjust "Brush Size" (F) you see a circle with a radius without taking into account the hiDPI.
Richard Antalik changed title from Brush Size display not accurate in Particle Edit to Brush Size not accurate on hiDPI retina screen 2020-01-27 16:30:44 +01:00

@jenkm Thanks for more info.

@jenkm Thanks for more info.
Richard Antalik removed their assignment 2020-02-27 14:48:24 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht here's the patch for that.

diff --git a/source/blender/editors/physics/particle_edit.c b/source/blender/editors/physics/particle_edit.c
index 92e76ab31fa..52ba27902da 100644
--- a/source/blender/editors/physics/particle_edit.c
+++ b/source/blender/editors/physics/particle_edit.c
@@ -207,7 +207,7 @@ static float pe_brush_size_get(const Scene *UNUSED(scene), ParticleBrushData *br
   *UnifiedPaintSettings *ups = &scene->toolsettings->unified_paint_settings;* float size = (ups->flag & UNIFIED_PAINT_SIZE) ? ups->size : brush->size;
 
-  return brush->size * U.pixelsize;
+  return brush->size;
 }
 
 PTCacheEdit *PE_get_current_from_psys(ParticleSystem *psys)

@brecht here's the patch for that. ``` diff --git a/source/blender/editors/physics/particle_edit.c b/source/blender/editors/physics/particle_edit.c index 92e76ab31fa..52ba27902da 100644 --- a/source/blender/editors/physics/particle_edit.c +++ b/source/blender/editors/physics/particle_edit.c @@ -207,7 +207,7 @@ static float pe_brush_size_get(const Scene *UNUSED(scene), ParticleBrushData *br *UnifiedPaintSettings *ups = &scene->toolsettings->unified_paint_settings;* float size = (ups->flag & UNIFIED_PAINT_SIZE) ? ups->size : brush->size; - return brush->size * U.pixelsize; + return brush->size; } PTCacheEdit *PE_get_current_from_psys(ParticleSystem *psys) ```

This issue was referenced by 27fa33c143

This issue was referenced by 27fa33c14326e08b61955b0034b5b4b1f2552591

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-28 15:57:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72404
No description provided.