Fix T72404: particle brush size radial control mismatch on high DPI display